fix spacing

--- a/src/htdocs/css/features/_historicalEvents.scss
+++ b/src/htdocs/css/features/_historicalEvents.scss
@@ -27,7 +27,7 @@
       align-items: center;
       display: flex;
       gap: 0 .375rem;
-      padding: 0 0 0 .5rem;
+      margin-top: -.1875rem;
     }
 
     @container
